--- a/src/demo/demo.ui
+++ b/src/demo/demo.ui
@@ -17,7 +17,7 @@
    <bool>false</bool>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QListView" name="lv_ag_jobs_list">
+   <widget class="QListWidget" name="lw_ag_jobs_list">
     <property name="geometry">
      <rect>
       <x>1140</x>
@@ -47,9 +47,9 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>200</y>
+      <y>160</y>
       <width>561</width>
-      <height>141</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -66,6 +66,9 @@
        <width>411</width>
        <height>21</height>
       </rect>
+     </property>
+     <property name="text">
+      <string>Inffeldgasse 16a, 8010 Graz</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_5">
@@ -90,6 +93,9 @@
        <height>21</height>
       </rect>
      </property>
+     <property name="text">
+      <string>Herrengasse 10, 8010 Graz</string>
+     </property>
     </widget>
     <widget class="QLabel" name="label_6">
      <property name="geometry">
@@ -112,6 +118,9 @@
        <width>411</width>
        <height>21</height>
       </rect>
+     </property>
+     <property name="text">
+      <string>1x 1.5ECTS with grade ANY</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_7">
@@ -159,7 +168,7 @@
      <rect>
       <x>1140</x>
       <y>170</y>
-      <width>137</width>
+      <width>171</width>
       <height>147</height>
      </rect>
     </property>
@@ -172,7 +181,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="le_ag_user"/>
+      <widget class="QLineEdit" name="le_ag_user">
+       <property name="text">
+        <string>agent@example.com</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QLabel" name="label_11">
@@ -182,7 +195,11 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="le_ag_passwd"/>
+      <widget class="QLineEdit" name="le_ag_passwd">
+       <property name="text">
+        <string>secret</string>
+       </property>
+      </widget>
      </item>
      <item>
       <widget class="QPushButton" name="btn_ag_login">
@@ -196,10 +213,10 @@
    <widget class="QLabel" name="label_13">
     <property name="geometry">
      <rect>
-      <x>1090</x>
+      <x>1069</x>
       <y>850</y>
-      <width>60</width>
-      <height>16</height>
+      <width>81</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -209,10 +226,10 @@
    <widget class="QLabel" name="l">
     <property name="geometry">
      <rect>
-      <x>1090</x>
+      <x>1069</x>
       <y>880</y>
-      <width>60</width>
-      <height>16</height>
+      <width>81</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
@@ -278,12 +295,12 @@
      <string>Take Job</string>
     </property>
    </widget>
-   <widget class="QListView" name="lv_cust_jobs">
+   <widget class="QListWidget" name="lw_cust_jobs">
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>410</y>
-      <width>211</width>
+      <y>380</y>
+      <width>421</width>
       <height>111</height>
      </rect>
     </property>
@@ -292,7 +309,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>390</y>
+      <y>360</y>
       <width>60</width>
       <height>16</height>
      </rect>
@@ -301,22 +318,12 @@
      <string>My Jobs</string>
     </property>
    </widget>
-   <widget class="QListView" name="lv_cust_jobs_2">
-    <property name="geometry">
-     <rect>
-      <x>490</x>
-      <y>390</y>
-      <width>261</width>
-      <height>131</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_18">
     <property name="geometry">
      <rect>
-      <x>420</x>
-      <y>390</y>
-      <width>41</width>
+      <x>610</x>
+      <y>380</y>
+      <width>61</width>
       <height>111</height>
      </rect>
     </property>
@@ -327,8 +334,8 @@
    <widget class="QLabel" name="label_19">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>370</y>
+      <x>660</x>
+      <y>360</y>
       <width>60</width>
       <height>16</height>
      </rect>
@@ -337,228 +344,11 @@
      <string>Details</string>
     </property>
    </widget>
-   <widget class="QFrame" name="frame_2">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>1611</width>
-      <height>1001</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
-    </property>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>410</x>
-       <y>860</y>
-       <width>471</width>
-       <height>33</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QLineEdit" name="le_addr_query">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="btn_geo_translate">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>Query</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-     <zorder>btn_geo_translate</zorder>
-     <zorder>le_addr_query</zorder>
-    </widget>
-    <widget class="QLabel" name="label_4">
-     <property name="enabled">
-      <bool>true</bool>
-     </property>
-     <property name="geometry">
-      <rect>
-       <x>70</x>
-       <y>10</y>
-       <width>921</width>
-       <height>811</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/usecase_monitor/usecase_screen.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>150</y>
-       <width>474</width>
-       <height>33</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout">
-      <item>
-       <widget class="QLabel" name="label">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>username</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="le_cust_user">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_2">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>password</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLineEdit" name="le_cust_passwd">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="btn_cust_login">
-        <property name="enabled">
-         <bool>true</bool>
-        </property>
-        <property name="text">
-         <string>Login</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
-     <zorder>label_2</zorder>
-     <zorder>label</zorder>
-     <zorder>btn_cust_login</zorder>
-     <zorder>le_cust_user</zorder>
-     <zorder>le_cust_passwd</zorder>
-    </widget>
-    <widget class="QLabel" name="lbl_cust_resp">
-     <property name="geometry">
-      <rect>
-       <x>700</x>
-       <y>610</y>
-       <width>111</width>
-       <height>16</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>&lt;Reponse Code&gt;</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_12">
-     <property name="geometry">
-      <rect>
-       <x>1080</x>
-       <y>-10</y>
-       <width>421</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:36pt; font-weight:600;&quot;&gt;Michaels's Phone&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_cust_refresh_jobs">
-     <property name="geometry">
-      <rect>
-       <x>190</x>
-       <y>520</y>
-       <width>113</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Refresh</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="btn_cust_details_jobs">
-     <property name="geometry">
-      <rect>
-       <x>490</x>
-       <y>520</y>
-       <width>113</width>
-       <height>32</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>Details</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_14">
-     <property name="geometry">
-      <rect>
-       <x>1040</x>
-       <y>790</y>
-       <width>31</width>
-       <height>171</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:96pt;&quot;&gt;[&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="label_15">
-     <property name="geometry">
-      <rect>
-       <x>1490</x>
-       <y>790</y>
-       <width>31</width>
-       <height>181</height>
-      </rect>
-     </property>
-     <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:96pt;&quot;&gt;]&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-     </property>
-    </widget>
-    <zorder>layoutWidget</zorder>
-    <zorder>label_4</zorder>
-    <zorder>layoutWidget</zorder>
-    <zorder>lbl_cust_resp</zorder>
-    <zorder>btn_cust_refresh_jobs</zorder>
-    <zorder>btn_cust_details_jobs</zorder>
-    <zorder>label_14</zorder>
-    <zorder>label_15</zorder>
-    <zorder>label_12</zorder>
-   </widget>
    <widget class="QLineEdit" name="le_ag_radius">
     <property name="geometry">
      <rect>
-      <x>1190</x>
-      <y>340</y>
+      <x>1500</x>
+      <y>360</y>
       <width>125</width>
       <height>21</height>
      </rect>
@@ -567,7 +357,7 @@
    <widget class="QLabel" name="label_20">
     <property name="geometry">
      <rect>
-      <x>1140</x>
+      <x>1500</x>
       <y>340</y>
       <width>125</width>
       <height>21</height>
@@ -580,9 +370,9 @@
    <widget class="QLabel" name="lbl_ag_resp">
     <property name="geometry">
      <rect>
-      <x>1240</x>
+      <x>1190</x>
       <y>700</y>
-      <width>111</width>
+      <width>201</width>
       <height>16</height>
      </rect>
     </property>
@@ -606,8 +396,8 @@
    <widget class="QLabel" name="lbl_active_job">
     <property name="geometry">
      <rect>
-      <x>1320</x>
-      <y>210</y>
+      <x>1340</x>
+      <y>230</y>
       <width>81</width>
       <height>21</height>
      </rect>
@@ -626,12 +416,209 @@
      </rect>
     </property>
     <property name="text">
-     <string>Update Position</string>
+     <string>Finish Job</string>
     </property>
    </widget>
-   <zorder>frame_2</zorder>
+   <widget class="QLabel" name="zzzz">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>20</y>
+      <width>881</width>
+      <height>801</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/usecase_monitor/usecase_screen.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_cust_refresh_jobs">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>490</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Refresh</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_cust_details_jobs">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>490</y>
+      <width>113</width>
+      <height>32</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Details</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>1080</x>
+      <y>-10</y>
+      <width>421</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:36pt; font-weight:600;&quot;&gt;Michaels's Phone&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_cust_resp">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>610</y>
+      <width>441</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;Reponse Code&gt;</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_geo_translate">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>860</y>
+      <width>89</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Translate</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="le_addr_query">
+    <property name="geometry">
+     <rect>
+      <x>370</x>
+      <y>860</y>
+      <width>461</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Inffeldgasse 16a, 8010 Graz</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_token_customer">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>890</y>
+      <width>721</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;token customer&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_token_agent">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>910</y>
+      <width>721</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>&lt;token agent&gt;</string>
+    </property>
+   </widget>
+   <widget class="QTextEdit" name="te_job_details">
+    <property name="geometry">
+     <rect>
+      <x>660</x>
+      <y>380</y>
+      <width>161</width>
+      <height>111</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="layoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>810</y>
+      <width>561</width>
+      <height>33</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>username</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="le_cust_user">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>admin@example.com</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_2">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>password</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLineEdit" name="le_cust_passwd">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>secret</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_cust_login">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="text">
+        <string>Login</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+    <zorder>btn_cust_login</zorder>
+    <zorder>le_cust_passwd</zorder>
+    <zorder>label_2</zorder>
+    <zorder>le_cust_user</zorder>
+    <zorder>label</zorder>
+   </widget>
+   <zorder>zzzz</zorder>
    <zorder>label_3</zorder>
-   <zorder>lv_ag_jobs_list</zorder>
+   <zorder>lw_ag_jobs_list</zorder>
    <zorder>frame</zorder>
    <zorder>layoutWidget</zorder>
    <zorder>label_13</zorder>
@@ -641,9 +628,8 @@
    <zorder>btn_ag_query_jobs</zorder>
    <zorder>label_16</zorder>
    <zorder>btn_ag_take</zorder>
-   <zorder>lv_cust_jobs</zorder>
+   <zorder>lw_cust_jobs</zorder>
    <zorder>label_17</zorder>
-   <zorder>lv_cust_jobs_2</zorder>
    <zorder>label_18</zorder>
    <zorder>label_19</zorder>
    <zorder>le_ag_radius</zorder>
@@ -653,6 +639,16 @@
    <zorder>btn_ag_update_pos</zorder>
    <zorder>lbl_active_job</zorder>
    <zorder>btn_ag_fin_job</zorder>
+   <zorder>btn_cust_refresh_jobs</zorder>
+   <zorder>btn_cust_details_jobs</zorder>
+   <zorder>label_12</zorder>
+   <zorder>lbl_cust_resp</zorder>
+   <zorder>btn_geo_translate</zorder>
+   <zorder>le_addr_query</zorder>
+   <zorder>lbl_token_customer</zorder>
+   <zorder>lbl_token_agent</zorder>
+   <zorder>te_job_details</zorder>
+   <zorder>layoutWidget</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
