--- a/src/demo/demo.ui
+++ b/src/demo/demo.ui
@@ -47,9 +47,9 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>160</y>
+      <y>200</y>
       <width>561</width>
-      <height>181</height>
+      <height>141</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -301,7 +301,7 @@
       <x>190</x>
       <y>380</y>
       <width>421</width>
-      <height>111</height>
+      <height>161</height>
      </rect>
     </property>
    </widget>
@@ -321,14 +321,14 @@
    <widget class="QLabel" name="label_18">
     <property name="geometry">
      <rect>
-      <x>610</x>
+      <x>620</x>
       <y>380</y>
-      <width>61</width>
+      <width>31</width>
       <height>111</height>
      </rect>
     </property>
     <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-family:'u2400'; font-size:48pt; color:#111111; background-color:#ffffff;&quot;&gt;➜&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-family:'u2400'; font-size:28pt; color:#111111; background-color:#ffffff;&quot;&gt;➜&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_19">
@@ -344,40 +344,20 @@
      <string>Details</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="le_ag_radius">
-    <property name="geometry">
-     <rect>
-      <x>1500</x>
-      <y>360</y>
-      <width>125</width>
-      <height>21</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_20">
-    <property name="geometry">
-     <rect>
-      <x>1500</x>
-      <y>340</y>
-      <width>125</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>radius</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lbl_ag_resp">
     <property name="geometry">
      <rect>
-      <x>1190</x>
+      <x>1120</x>
       <y>700</y>
-      <width>201</width>
-      <height>16</height>
+      <width>331</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>&lt;Reponse Code&gt;</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_ag_update_pos">
@@ -419,27 +399,11 @@
      <string>Finish Job</string>
     </property>
    </widget>
-   <widget class="QLabel" name="zzzz">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>50</x>
-      <y>20</y>
-      <width>881</width>
-      <height>801</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/usecase_monitor/usecase_screen.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-    </property>
-   </widget>
    <widget class="QPushButton" name="btn_cust_refresh_jobs">
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>490</y>
+      <y>540</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -452,7 +416,7 @@
     <property name="geometry">
      <rect>
       <x>660</x>
-      <y>490</y>
+      <y>540</y>
       <width>113</width>
       <height>32</height>
      </rect>
@@ -477,14 +441,17 @@
    <widget class="QLabel" name="lbl_cust_resp">
     <property name="geometry">
      <rect>
-      <x>240</x>
+      <x>110</x>
       <y>610</y>
-      <width>441</width>
-      <height>16</height>
+      <width>771</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="text">
      <string>&lt;Reponse Code&gt;</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_geo_translate">
@@ -517,7 +484,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>890</y>
+      <y>910</y>
       <width>721</width>
       <height>17</height>
      </rect>
@@ -530,7 +497,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>910</y>
+      <y>930</y>
       <width>721</width>
       <height>17</height>
      </rect>
@@ -545,78 +512,112 @@
       <x>660</x>
       <y>380</y>
       <width>161</width>
-      <height>111</height>
+      <height>161</height>
      </rect>
     </property>
    </widget>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>810</y>
-      <width>561</width>
-      <height>33</height>
+      <x>70</x>
+      <y>30</y>
+      <width>891</width>
+      <height>761</height>
      </rect>
     </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string>username</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="le_cust_user">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string>admin@example.com</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_2">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string>password</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="le_cust_passwd">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string>secret</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="btn_cust_login">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="text">
-        <string>Login</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-    <zorder>btn_cust_login</zorder>
-    <zorder>le_cust_passwd</zorder>
-    <zorder>label_2</zorder>
-    <zorder>le_cust_user</zorder>
-    <zorder>label</zorder>
+    <property name="text">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/usecase_monitor/usecase_screen.png&quot;/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
    </widget>
-   <zorder>zzzz</zorder>
+   <widget class="QLineEdit" name="le_cust_user">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>170</y>
+      <width>171</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>admin@example.com</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="le_cust_passwd">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>170</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>secret</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_cust_login">
+    <property name="geometry">
+     <rect>
+      <x>650</x>
+      <y>170</y>
+      <width>101</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Login</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>170</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>username</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>170</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>password</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="le_ag_radius">
+    <property name="geometry">
+     <rect>
+      <x>1320</x>
+      <y>330</y>
+      <width>113</width>
+      <height>25</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>1240</x>
+      <y>330</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>radius / m</string>
+    </property>
+   </widget>
+   <zorder>label_4</zorder>
    <zorder>label_3</zorder>
    <zorder>lw_ag_jobs_list</zorder>
    <zorder>frame</zorder>
@@ -632,8 +633,6 @@
    <zorder>label_17</zorder>
    <zorder>label_18</zorder>
    <zorder>label_19</zorder>
-   <zorder>le_ag_radius</zorder>
-   <zorder>label_20</zorder>
    <zorder>label_8</zorder>
    <zorder>lbl_ag_resp</zorder>
    <zorder>btn_ag_update_pos</zorder>
@@ -648,7 +647,13 @@
    <zorder>lbl_token_customer</zorder>
    <zorder>lbl_token_agent</zorder>
    <zorder>te_job_details</zorder>
-   <zorder>layoutWidget</zorder>
+   <zorder>le_cust_user</zorder>
+   <zorder>le_cust_passwd</zorder>
+   <zorder>btn_cust_login</zorder>
+   <zorder>label</zorder>
+   <zorder>label_2</zorder>
+   <zorder>le_ag_radius</zorder>
+   <zorder>label_9</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
